--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,7 @@ language: fi
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Marcus O'Brienin kohtalo
 url: http://www.gutenberg.org/ebooks/48564
